# bench-cli

./: Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
.github/workflows/: release-cli.yml
src/: config.rs  lib.rs  main.rs  token.rs
