[package]
name = "bench"
version = "0.1.0"
edition = "2021"
authors = ["Bench Computing <admin@bench.io>"]
description = "Bench CLI tool"
repository = "https://github.com/bench-chat/bench"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winuser"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2.169"

[dependencies]
anyhow = "1.0.95"
async-trait = "0.1.85"
clap = { version = "4.5.27", features = ["derive"] }
dirs = "6.0.0"
eventsource-client = { version = "0.13.0" }
form_urlencoded = "1.2.1"
futures = "0.3.31"
futures-util = "0.3.31"
rand = "0.9.0"
reqwest = { version = "0.12.12", features = ["json", "native-tls-vendored"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
time = "0.3.37"
tokio = { version = "1.43.0", features = ["full"] }
tokio-tungstenite = { version = "0.26.1", features = ["native-tls"] }
tokio-util = "0.7.13"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
url = "2.5.4"
uuid = {version="1.12.1", features=["v4"]}
webbrowser = "1.0.3"

[dev-dependencies]
assert_matches = "1.5.0"
mockall = "0.13.1"
test-case = "3.3.1"
tokio-test = "0.4.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true
